--- a/Tex Docu/Programmdokumentation-Vorlage.tex
+++ b/Tex Docu/Programmdokumentation-Vorlage.tex
@@ -29,12 +29,12 @@
     
 
 \begin{document}
-\titlehead{Seminar XY \hfill Goethe-Universtität Frankfurt am Main}
+\titlehead{Praktikum Deep Learning for Text Imaging \hfill Goethe-Universtität Frankfurt am Main}
 \subject{Typisierung der Arbeit}
-\author{Vorname Name \\ Matrikelnummer}
-\title{Titel der Arbeit}
-\subtitle{Ggf. Untertitel}
-\publishers{Betreuer}
+\author{Yasin Giray (<Matrikelnummer>) \\ Yannick Ace Schlund (6887735)}
+\title{Erstellung von Python-Webservern im Docker}
+\subtitle{zum jeb-unabhängigen Arbeiten mehrerer Annotator}
+\publishers{Guiseppe Abrami \& Daniel Baumartz}
 
 \maketitle
 
